--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "grunt-contrib-cssmin": "~0.6.1",
     "grunt-contrib-connect": "~0.3.0",
     "grunt-contrib-copy": "~0.4.1",
-    "grunt-exec": "~0.4.2"
+    "grunt-exec": "~0.4.2",
+    "grunt-contrib-compress": "~0.5.2",
+    "grunt-ftp-deploy": "~0.0.10"
   }
 }
