--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RelsemBridgeFrontent",
+  "name": "RelsemBridgeFrontend",
   "version": "0.0.1",
   "description": "",
   "main": "Gruntfile.js",
